[Feat] styled popup & small refactor

--- a/plugin/source/styles/styles.scss
+++ b/plugin/source/styles/styles.scss
@@ -1,11 +1,47 @@
-#symbolValue, #symbolBtn {
-  display: inline-block;
+body {
+  background-color: lightgrey;
+}
+
+form {
+  display: inline;
+}
+
+#container {
+  width: 200px;
 }
 
 #directions {
   display: none;
 }
 
-#separator {
-  
+#message {
+  height: 35px;
 }
+
+#separator {
+  height: 1px;
+  background: #717171;
+  border-bottom: 1px solid #313030;
+  margin: 8px auto 4px auto;
+}
+
+/*.chk
+{
+  display:inline-block;
+  width:13px;
+  height:13px;
+  border-radius: 3px;
+  padding:2px;
+  border:1px #ccc solid;
+  cursor:pointer;
+}
+.chk[checked]{
+    background:url(http://png-2.findicons.com/files/icons/1583/silk_companion_1/16/bullet_tick.png);
+}
+.chk[unchecked]{
+    background:url(http://png-2.findicons.com/files/icons/1583/silk_companion_1/16/bullet_tick.png);
+}
+input[type=checkbox]
+{
+    display:none;
+}*/
