[feat] iframe removes when all deleted

--- a/plugin/extension/assets/styles/content.css
+++ b/plugin/extension/assets/styles/content.css
@@ -1,1 +1,1 @@
-.stockSpan{font-family:Roboto,serif;font-size:10px}.negative{color:red}.positive{color:green}.stockLink:link,.stockLink:visited{color:#000}.stockLink:hover{color:blue}
+.stockSpan{font-family:Roboto,serif;font-size:10px}.negative{color:red}.positive{color:green}.stockLink:link,.stockLink:visited{color:#000}.stockLink:hover{color:blue}#time{float:right}
