--- a/plugin/extension/assets/styles/popup.css
+++ b/plugin/extension/assets/styles/popup.css
@@ -1,1 +1,1 @@
-body{background-color:#d3d3d3}form{display:inline}.centered{text-align:center}#container{width:200px}#directions{display:none}#message{height:35px}#separator{height:1px;background:#717171;border-bottom:1px solid #313030;margin:8px auto 4px}
+body{background-color:#d3d3d3}form{display:inline}.centered{text-align:center}#container{width:200px}#directions{display:none}#message{height:35px}#separator{height:1px;background:#717171;border-bottom:1px solid #313030;margin:8px auto 4px}#disabled{display:none;color:red}
