Adjust position of popup list

--- a/plugin/extension/assets/styles/popup.css
+++ b/plugin/extension/assets/styles/popup.css
@@ -1,1 +1,1 @@
-body{background-color:#d3d3d3}form{display:inline}.centered{text-align:center}.separator{height:1px;background:#717171;border-bottom:1px solid #313030;margin:8px auto 4px}.cursor{cursor:pointer}#container{width:200px}#directions{display:none}#message{height:35px}
+body{background-color:#d3d3d3}form{display:inline}.centered{text-align:center}.separator{height:1px;background:#717171;border-bottom:1px solid #313030;margin:8px auto 4px}.cursor{cursor:pointer}.symbol{position:relative;bottom:2.8px}#container{width:200px}#directions{display:none}#message{height:35px}
